# greenleafcleaning

./: .env  README.md  go.mod  go.sum  main.go  manage.py  roadmap.md
backend/: .env  pyproject.toml  routes.py  run.py
backend/src/backend/: __init__.py  config.py  factory.py  ginodb.py  routes.py  settings.py
backend/src/backend/blueprints/order/: views.py
backend/src/backend/blueprints/order/templates/order/: create.html
backend/src/backend/blueprints/public/: forms.py  views.py
backend/src/backend/blueprints/public/templates/public/: about.html  contact.html  estimate.html  index.html  public.html
backend/src/backend/migrations/: 0.py
backend/src/backend/models/: models.py  queries.py
backend/src/backend/models/test/: populate.py
backend/src/backend/static/css/: main.css
backend/src/backend/templates/: base.html
backend/src/instance/: development.db
backend/templates/: base.html
backend/tests/: issues.txt
config/: config.go
data/: contacts.go  schema.go
handler/: handler.go  htmltemplate.go  routes.go
handlers/: formhandlers.go  routehandlers.go
instance/: aio_testing.db  development.db  testing.db
models/: models.go
old/: factory.py
old/blueprints/order/: forms.py
routes/: go.mod  routes.go
server/: .env  config.py  factory.py
server/blueprints/public/: views.py
server/blueprints/public/templates/public/: index.html  x.html  (+1 more)
server/models/: insert.py  models.py  modelsReadMe.md  populate.py
server/static/css/: main.css
server/static/js/: learn.js
static/css/: main.css
templates/: index.html
utils/: utils.go
